k8s/chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: honeypots-isolation
  namespace: dpipot
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        values:
          - dpipot-proxy
          - kafka
          - logstash
          - filebeat
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dpipot
          podSelector:
            matchLabels:
              app: dpipot-proxy
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 22
        - protocol: TCP
          port: 2222
        - protocol: TCP
          port: 2323
        - protocol: TCP
          port: 21
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 1433
        - protocol: TCP
          port: 135
        - protocol: TCP
          port: 445
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 9200
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
